<resources>
    <string name="app_name">MyAppNotifications</string>
    <string name="notifications_app">NOTIFICATIONS APP</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast">Toast</string>
    <string name="snackBar">SnackBar</string>
    <string name="snackBarWithAction">SnackBar With Action</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="alert_dialog_custom">Alert Dialog Custom</string>
    <string name="show_toast">show toast</string>
    <string name="dialog_fragment">Dialog Fragment</string>
    <string name="dialog_fragment_custom">Dialog Fragment Custom</string>
    <string name="bottom_sheet_dialog_fragment">Bottom sheet Dialog Fragment</string>
    <string name="push_notification">Push Notification</string>
    <string name="alert_dialog_custom_list">Alert Dialog Custom List</string>
    <string name="alert_dialog_custom_list_single_choice">Alert Dialog Custom List Single Choice</string>
    <string name="alert_dialog_custom_list_multi_choice">Alert Dialog Custom List Multi Choice</string>
</resources>