<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        tools:context=".FragmentNotifications">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/toast" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_snackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/snackBar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_snackBarWithAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/snackBarWithAction" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_alertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/alert_dialog" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_alertDialogCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/alert_dialog_custom" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialogFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/dialog_fragment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialogFragmentCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/dialog_fragment_custom" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_bottomSheetDialogFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/bottom_sheet_dialog_fragment" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pushNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/push_notification" />
        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/btn_snackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/snackBar" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_snackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_buttons"
            android:text="@string/snackBar" />-->

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>